--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/parkerwy/get-executables#readme",
   "dependencies": {
-    "electron": "^1.4.13"
+    "bootstrap": "^3.3.7",
+    "electron": "^1.4.13",
+    "jquery": "^3.1.1",
+    "request": "^2.79.0"
   }
 }
