--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "electron": "^1.4.13",
+    "electron-config": "^0.2.1",
     "jquery": "^3.1.1",
     "request": "^2.79.0"
   }
