--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/parkerwy/get-executables#readme",
   "dependencies": {
-    "bootstrap": "^3.3.7",
     "electron": "^1.4.13",
     "electron-config": "^0.2.1",
     "jquery": "^3.1.1",
+    "photonkit": "^0.1.2",
     "request": "^2.79.0"
   },
   "devDependencies": {
