--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/parkerwy/get-executables#readme",
   "dependencies": {
+    "angular": "^1.6.1",
     "electron": "^1.4.13",
     "electron-config": "^0.2.1",
     "jquery": "^3.1.1",
