--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/parkerwy/get-executables#readme",
   "dependencies": {
-    "angular": "^1.6.1",
+    "angular": "~1.5.11",
+    "angular-animate": "~1.5.11",
+    "angular-aria": "~1.5.11",
+    "angular-material": "~1.1.3",
     "electron": "^1.4.13",
     "electron-config": "^0.2.1",
-    "jquery": "^3.1.1",
-    "photonkit": "^0.1.2",
     "request": "^2.79.0"
   },
   "devDependencies": {
