--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/parkerwy/get-executables#readme",
   "devDependencies": {
+    "del": "^2.2.2",
     "electron": "^1.4.13",
     "electron-packager": "^8.5.1",
     "gulp": "^3.9.1",
